--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -7,6 +7,7 @@
     --text: #262626;
     --grey: #8e8e8e;
     --main-text: #fafafa;
+    --border: #dbdbdb
 }
 
 *{
@@ -26,6 +27,7 @@ html{
     text-align: center;
     flex-direction: column;
     background-color: var(--main-text);
+    margin: 0 auto;
 }
 
 .main .container-img-logo {
@@ -34,11 +36,12 @@ html{
     align-items: center;
     width: 100%;
     min-width: 320px;
+    max-width: 375px;
     height: 150px;
 }
 
 .container-img-logo .img-logo {
-    width: 170px;
+    width: 185px;
     height: 70px;  
 }
 
@@ -46,30 +49,34 @@ html{
     display: flex;
     flex-direction: column;
     width: 100%;
-    min-width: 320px;   
+    min-width: 320px;
+    max-width: 375px;   
 }
 
 .form-container .form--input {
-    width: 70%;
-    height: 30px;
-    margin: 5px auto;
-    border: none;
-    border-radius: 5px;
+    width: 75%;
+    height: 40px;
+    font-size: 1rem;
+    margin: 3px auto;
+    border: 1px solid var(--border);
+    border-radius: 2px;
     background-color: var(--main-text);
 }
 
 .form-container .form--button {
-    width: 70%;
-    height: 25px;
-    margin: 15px auto;
+    width: 75%;
+    height: 30px;
+    margin: 10px auto;
     border: none;
-    border-radius: 5px;
+    border-radius: 4px;
     color: var(--main-text);
     background-color: var(--blue);
 }
 
 .container--divisor {
     width: 100%;
+    min-width: 320px;
+    max-width: 375px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -78,7 +85,7 @@ html{
 .container--divisor div {
     width: 29%;
     height: 1px;
-    background-color: var(--grey);
+    background-color: var(--border);
     margin: 0 15px;
 }
 
@@ -90,6 +97,8 @@ html{
 
 .login--alternative--container {
     width: 100%;
+    min-width: 320px;
+    max-width: 375px;
 }
 
 .login--alternative--container .login--alternative {
@@ -107,6 +116,7 @@ html{
 }
 
 .alternative--link .fa-brands {
+    font-size: 2rem;
     margin-right: 8px;
 }
 
@@ -131,6 +141,9 @@ html{
 }
 
 .section--downloads {
+    width: 100%;
+    min-width: 320px;
+    max-width: 375px;
     margin-bottom: 50px;
 }
 
@@ -181,4 +194,20 @@ html{
     justify-content: center;
     margin: 20px 0 50px 0;
     list-style: none;
+}
+
+.footer--list2 a {
+    font-size: 1.2rem;
+    color: var(--grey);
+    text-decoration: none;
+}
+
+.footer--list2 .fa-solid {
+    margin: 0 7px 0 4px;
+}
+
+.footer--list2 .fa-regular {
+    align-items: center;
+    font-size: 0.9rem;
+    margin: 0 5px 0 7px;
 }
