--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -7,7 +7,8 @@
     --text: #262626;
     --grey: #8e8e8e;
     --main-text: #fafafa;
-    --border: #dbdbdb
+    --border: #dbdbdb;
+    --white: #ffffff;
 }
 
 *{
@@ -21,13 +22,14 @@ html{
     font-family: 'DM Sans', sans-serif;
 }
 
+
 .main {
-    width: 100%;
     display: flex;
+    width: 100%;
+    max-width: 375px;
     text-align: center;
     flex-direction: column;
     background-color: var(--main-text);
-    margin: 0 auto;
 }
 
 .main .container-img-logo {
@@ -127,7 +129,7 @@ html{
     color: var(--dark-blue-password);
 }
 
-.login--alternative .login--alternative--Registration {
+.section--registration .login--alternative--Registration {
     margin-top: 45px;
     font-weight: 400;
     font-size: 1.4rem;
